# MMC5983MA-Driver

./: CMakeLists.txt  README.md  cmake-variants.yaml  mbed_app.json  test_MMC5983MA.cpp
MMC5983MA/: CMakeLists.txt  MMC5983MA.cpp  MMC5983MA.h
cmake/: UploadMethodConfig.cmake
